[gd_scene load_steps=2 format=3 uid="uid://3v0u608rp6h3"]

[ext_resource type="Script" uid="uid://bsrrx28rpkp15" path="res://scenes/UIScenes/ResouresPanel/resources_panel.gd" id="1_3b2xk"]

[node name="ResourcesPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3b2xk")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="FoodBar" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 163.0
offset_top = 5.0
offset_right = 229.0
offset_bottom = 45.0

[node name="FoodLabel" type="Label" parent="Panel/FoodBar"]
layout_mode = 2
text = "Food: "

[node name="FoodCount" type="Label" parent="Panel/FoodBar"]
layout_mode = 2
text = "0"

[node name="WoodBar" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 291.0
offset_top = 5.0
offset_right = 357.0
offset_bottom = 45.0

[node name="WoodLabel" type="Label" parent="Panel/WoodBar"]
layout_mode = 2
text = "Wood: "

[node name="WoodCount" type="Label" parent="Panel/WoodBar"]
layout_mode = 2
text = "0"

[node name="StorageCapicityBar" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 422.0
offset_top = 5.0
offset_right = 570.0
offset_bottom = 45.0

[node name="StorageCapcityLabel" type="Label" parent="Panel/StorageCapicityBar"]
layout_mode = 2
text = "Storage Capcity: "

[node name="StorageCapcityCount" type="Label" parent="Panel/StorageCapicityBar"]
layout_mode = 2
text = "0"
